# Operations_Router_Resource

./: .gitignore  CHANGELOG  README.md  pyproject.toml
conf/: route_resource.conf  route_resource.conf.dev  route_resource.conf.prod  route_resource_v3.conf  router_resource.conf
sbin/: route_resource.rc  route_resource.service  route_resource.service.sh  route_resource.sh  route_resource.sysconfig  route_resource_v3.service  route_resource_v3.sh  route_resource_v3.sysconfig  router_resource.service  router_resource.service.sh  router_resource.sh  router_resource.sysconfig
utils/: search.py  utility.py
